--- a/frontend/src/components/lab/rhythmlab.css
+++ b/frontend/src/components/lab/rhythmlab.css
@@ -1,6 +1,23 @@
-.inactive {
+/* .inactive.rhythmNote {
+    background-color: black;
+} */
+
+.inactive.chord {
+    background-color: orange;
+}
+
+.active.chord {
+    background-color: red !important
+}
+
+.inactive{
     background-color: wheat;
 }
+
 .active {
-    background-color:white;
+    background-color:white !important
+}
+
+.red{
+    background-color: red;
 }
