--- a/frontend/src/components/modal/modal.css
+++ b/frontend/src/components/modal/modal.css
@@ -24,6 +24,10 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
   }
+
+  #tabDownloadModal {
+    width: 700px;
+  }
   
   .modal__header {
     background: lightcoral;
