--- a/frontend/src/components/modal/modal.css
+++ b/frontend/src/components/modal/modal.css
@@ -37,13 +37,13 @@
   }
   
   .modal__main {
-    padding: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
   }
   
   .close-button {
     border: none;
     background: transparent;
-    padding: 10px;
     cursor: pointer;
     color: #fff;
     font-size: 36px;
